ui: shop: fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -142,3 +142,7 @@
     /*grid-gap: 1rem;*/
     grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
 }
+
+.shop-grid a {
+    color: #4a4a4a;
+}
